--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/genai": "^1.19.0",
     "@ramonak/react-progress-bar": "^5.0.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,11 +18,16 @@
     "copy-to-clipboard": "^3.3.3",
     "cors": "^2.8.5",
     "express-fileupload": "^1.4.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.9.0",
     "jsonwebtoken": "^9.0.1",
+    "jspdf": "^3.0.2",
+    "lucide-react": "^0.544.0",
     "mongoose": "^7.4.1",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "otp-generator": "^4.0.1",
+    "pdfjs-dist": "^5.4.296",
     "razorpay": "^2.9.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -32,6 +38,7 @@
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.7",
     "react-otp-input": "^3.0.0",
+    "react-pdf": "^10.1.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
